{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 102,
  "lineage": "a515dfde-cdea-e464-6aca-f7d172909c2d",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-27T23:21:57.307-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-lang-client-0059045498/global/firewalls/cafrisales-allow-internal",
            "log_config": [],
            "name": "cafrisales-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "priority": 1000,
            "project": "gen-lang-client-0059045498",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/firewalls/cafrisales-allow-internal",
            "source_ranges": [
              "10.0.0.0/8",
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cafrisales-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-27T23:21:56.912-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-lang-client-0059045498/global/firewalls/cafrisales-deny-all",
            "log_config": [],
            "name": "cafrisales-deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "priority": 65534,
            "project": "gen-lang-client-0059045498",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/firewalls/cafrisales-deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.139.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-27T23:30:13.435-08:00",
            "id": "projects/gen-lang-client-0059045498/global/addresses/cafrisales-private-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cafrisales-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "prefix_length": 16,
            "project": "gen-lang-client-0059045498",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/addresses/cafrisales-private-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC privada para cafrisales",
            "enable_ula_internal_ipv6": false,
            "id": "projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "mtu": 0,
            "name": "cafrisales-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4303056199971255400",
            "project": "gen-lang-client-0059045498",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-01-27T20:03:30.579-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gen-lang-client-0059045498/regions/us-east1/routers/cafrisales-router",
            "name": "cafrisales-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "project": "gen-lang-client-0059045498",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/regions/us-east1/routers/cafrisales-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gen-lang-client-0059045498/us-east1/cafrisales-router/cafrisales-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cafrisales-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gen-lang-client-0059045498",
            "region": "us-east1",
            "router": "cafrisales-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.router"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-27T23:21:56.606-08:00",
            "description": "Subred para servicios de aplicación",
            "gateway_address": "10.0.1.1",
            "id": "projects/gen-lang-client-0059045498/regions/us-east1/subnetworks/cafrisales-app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "cafrisales-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gen-lang-client-0059045498",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/regions/us-east1/subnetworks/cafrisales-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "connector_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-28T00:51:32.195-08:00",
            "description": "Subred dedicada para Serverless VPC Access (Rango Limpio)",
            "gateway_address": "192.168.40.1",
            "id": "projects/gen-lang-client-0059045498/regions/us-east1/subnetworks/cafrisales-connector-subnet",
            "ip_cidr_range": "192.168.40.0/28",
            "name": "cafrisales-connector-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/global/networks/cafrisales-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gen-lang-client-0059045498",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-lang-client-0059045498/regions/us-east1/subnetworks/cafrisales-connector-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}